--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <h1 id="logo"><span class="bold">SPATIAL</span>BY TEMPLATE</h1>
+            <h1 id="logo"><span class="bold">SPATIAL</span> BY TEMPLATED</h1>
             <div id="navbar">
                 <a href="">HOME</a>
                 <a href="">GENERIC</a>
@@ -20,7 +20,8 @@
         </nav>
         <div id="headerTitle">
             <h1>SPATIAL</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum voluptate provident esse.</p>
+            <p>LOREM IPSUM DOLOR SIT AMET NULLAM CONSEQUAT</p>
+            <p>iNTERDUM VIVAMUS DONCE SED LIBERO</p>
             <button class="btn">GET STARTED</button>
         </div>
     </header>
