--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
     <main>
         <section id="sect1">
-            <div>
+            <div id="titleSect1">
                 <h2>MAECENAS LUCTUS LECTUS</h2>
                 <h3>PERSPICIATIS DOLOREMQUE RECUSANDAE DOLOR</h3>
             </div>
-            <div>
+            <div id="txtSect1">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos vitae repudiandae assumenda iusto ex fugiat laborum at vero laudantium, nisi eaque, cum dolore expedita enim dolores corrupti minus nostrum laboriosam ullam atque voluptatum ad similique facilis distinctio? Deleniti, praesentium qui.</p>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti quam optio voluptas adipisci nisi labore eligendi porro blanditiis tempora quidem explicabo omnis veritatis deserunt, sunt neque laboriosam. Harum, modi, sunt libero temporibus magnam ducimus sapiente vel nobis aliquam qui eligendi.</p>
             </div>
