--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <main>
         <section id="sect1">
             <div id="titleSect1">
-                <h2>MAECENAS LUCTUS LECTUS</h2>
-                <h3>PERSPICIATIS DOLOREMQUE RECUSANDAE DOLOR</h3>
+                <h2 class="titleDark">MAECENAS LUCTUS LECTUS</h2>
+                <h3 class="subTitleDark">PERSPICIATIS DOLOREMQUE RECUSANDAE DOLOR</h3>
             </div>
             <div id="txtSect1">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos vitae repudiandae assumenda iusto ex fugiat laborum at vero laudantium, nisi eaque, cum dolore expedita enim dolores corrupti minus nostrum laboriosam ullam atque voluptatum ad similique facilis distinctio? Deleniti, praesentium qui.</p>
@@ -38,33 +38,33 @@
             </div>
         </section>
         <section id="sect2">
-            <div>
-                <h2>FUSCE ULTRICES FRINGILLA</h2>
-                <h3>MAECENAS VITAE TELLUS FEUDIAT ELEIFEND</h3>
+            <div id="titleSect2">
+                <h2 class="titleDark">FUSCE ULTRICES FRINGILLA</h2>
+                <h3 class="subTitleDark">MAECENAS VITAE TELLUS FEUDIAT ELEIFEND</h3>
             </div>
             <div id="imgSect2">
-                <div>
+                <div class="card">
                     <div><img src="./public/img/pic02.jpg" alt=""></div>
                     <div>
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>LOREM IPSUM DOLOR SIT AMET.</p>
                     </div>
                 </div>
-                <div>
+                <div class="card">
                     <div><img src="./public/img/pic03.jpg" alt=""></div>
                     <div>
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>ILLUM, MAIORES TEMPORA CUPID</p>
                     </div>
                 </div>
             </div>
-            <div>
+            <div id="btnSect2">
                 <button class="btn">NULLA LUCTUS</button>
-                <button class="btn">SED VULPUTATE</button>
+                <button class="btnB">SED VULPUTATE</button>
             </div>
         </section>
         <section id="sect3">
             <div>
-                <h2>MAURIS VULPUTATE DOLOR</h2>
-                <h3>FEUGIAT SED LOREM IPSUM MAGNA</h3>
+                <h2 class="titleDark">MAURIS VULPUTATE DOLOR</h2>
+                <h3 class="subTitleDark">FEUGIAT SED LOREM IPSUM MAGNA</h3>
             </div>
             <div>
                 <div>
