--- a/index.html
+++ b/index.html
@@ -62,50 +62,50 @@
             </div>
         </section>
         <section id="sect3">
-            <div>
+            <div id="titleSect3">
                 <h2 class="titleDark">MAURIS VULPUTATE DOLOR</h2>
                 <h3 class="subTitleDark">FEUGIAT SED LOREM IPSUM MAGNA</h3>
             </div>
-            <div>
-                <div>
-                    <div>
-                        <h4>Lorem, ipsum.</h4>
-                        <h5>Lorem ipsum dolor sit.</h5>
+            <div class="rowSect3">
+                <div class="rowFlex">
+                    <div class="txtSectL">
+                        <h4>LOREM IPSUM</h4>
+                        <h5>LOREM IPSUM DOLOR SIT</h5>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit vel aliquam obcaecati iste tempore earum ipsum soluta ea consectetur rem.</p>
                     </div>
                     <div>
                         <img src="./public/img/pic04.jpg" alt="">
                     </div>
                 </div>
-                <div>
+                <div class="rowFlex">
                     <div>
                         <img src="./public/img/pic05.jpg" alt="">
                     </div>
-                    <div>
-                        <h4>Lorem, ipsum.</h4>
-                        <h5>Lorem ipsum dolor sit.</h5>
+                    <div class="txtSectR">
+                        <h4>LOREM IPSUM</h4>
+                        <h5>LOREM IPSUM DOLOR SIT</h5>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit vel aliquam obcaecati iste tempore earum ipsum soluta ea consectetur rem.</p>
                     </div>
                 </div>
             </div>
-            <div>
-                <div>
-                    <div>
-                        <h4>Lorem, ipsum.</h4>
-                        <h5>Lorem ipsum dolor sit.</h5>
+            <div class="rowSect3">
+                <div class="rowFlex">
+                    <div class="txtSectL">
+                        <h4>LOREM IPSUM</h4>
+                        <h5>LOREM IPSUM DOLOR SIT</h5>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit vel aliquam obcaecati iste tempore earum ipsum soluta ea consectetur rem.</p>
                     </div>
                     <div>
                         <img src="./public/img/pic06.jpg" alt="">
                     </div>
                 </div>
-                <div>
+                <div class="rowFlex">
                     <div>
                         <img src="./public/img/pic07.jpg" alt="">
                     </div>
-                    <div>
-                        <h4>Lorem, ipsum.</h4>
-                        <h5>Lorem ipsum dolor sit.</h5>
+                    <div class="txtSectR">
+                        <h4>LOREM IPSUM</h4>
+                        <h5>LOREM IPSUM DOLOR SIT</h5>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit vel aliquam obcaecati iste tempore earum ipsum soluta ea consectetur rem.</p>
                     </div>
                 </div>
