--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <img src="./public/img/pic04.jpg" alt="">
                     </div>
                 </div>
-                <div class="rowFlex">
+                <div class="rowFlex r">
                     <div>
                         <img src="./public/img/pic05.jpg" alt="">
                     </div>
@@ -99,7 +99,7 @@
                         <img src="./public/img/pic06.jpg" alt="">
                     </div>
                 </div>
-                <div class="rowFlex">
+                <div class="rowFlex r">
                     <div>
                         <img src="./public/img/pic07.jpg" alt="">
                     </div>
